--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1 class="hero-title">Bienvenidos al Olimpo</h1>
-                <p class="hero-text">Si has llegado hasta aquí, te doy un consejo: cierra esta página y sigue con tu vida normal.Los dioses, los monstruos y los héroes modernos no son cosas con las que quieras meterte.
+                <p class="hero-text">Si has llegado hasta aquí, te doy un consejo: cierra esta página y sigue con tu vida normal. Los dioses, los monstruos y los héroes modernos no son cosas con las que quieras meterte.
 Si decides continuar, recuerda esto:
 una vez que conoces la verdad, ya no hay marcha atrás.</p>
                 <a href="#" class="btn">Explorar Temas</a>
@@ -44,7 +44,7 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
         <div class="container">
             <div class="section-title">
                 <h2>Percy Jackson y Los Dioses del Olimpo (Saga)</h2>
-                <p>Explora diferentes áreas que me apasionan y sobre las que comparto contenido regularmente.</p>
+                <p>Explora la saga, sus historias y los temas que la definen, como la aventura, la identidad y el crecimiento personal, acompañando a Percy y sus amigos en cada desafío.</p>
             </div>
             <div class="categories-grid">
                 <div class="category-card">
@@ -52,11 +52,11 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                         <i class="fas fa-heartbeat"></i>
                     </div>
                     <h3>El Ladrón del Rayo</h3>
-                    <p>Percy descubre que es hijo de Poseidón y debe evitar una guerra entre dioses.</p>
+                    <p>Percy descubre que es un semidiós, hijo de Poseidón, y es acusado de robar el rayo de Zeus. Para evitar una guerra entre los dioses, emprende una misión peligrosa por todo EE. UU.</p>
                     <div class="category-tags">
-                        <span class="tag">Orígenes</span>
-                        <span class="tag">Dioses</span>
-                        <span class="tag">Rayo</span>
+                        <span class="tag">Descubrimiento</span>
+                        <span class="tag">Aventura</span>
+                        <span class="tag">Identidad</span>
                     </div>
                 </div>
                 <div class="category-card">
@@ -64,11 +64,11 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                         <i class="fas fa-apple-alt"></i>
                     </div>
                     <h3>El Mar de los Mounstros</h3>
-                    <p>Percy viaja al Mar de los Monstruos para salvar el Campamento Mestizo.</p>
+                    <p>El Campamento Mestizo está en peligro y Percy debe viajar al traicionero Mar de los Monstruos para salvarlo, mientras salen a la luz secretos sobre su familia y una antigua profecía.</p>
                     <div class="category-tags">
-                        <span class="tag">Rutinas</span>
-                        <span class="tag">Nutrición</span>
-                        <span class="tag">Deporte</span>
+                        <span class="tag">Lealtad</span>
+                        <span class="tag">Peligros</span>
+                        <span class="tag">Revelaciones</span>
                     </div>
                 </div>
                 <div class="category-card">
@@ -76,11 +76,11 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                         <i class="fas fa-music"></i>
                     </div>
                     <h3>La Maldición del Titán</h3>
-                    <p>Una profecía peligrosa amenaza a los semidioses y a los dioses.</p>
+                    <p>Una nueva profecía aparece y la amenaza de los titanes crece. Percy y sus amigos deben rescatar a una diosa, pero el destino no juega a su favor.</p>
                     <div class="category-tags">
-                        <span class="tag">Artistas</span>
-                        <span class="tag">Álbumes</span>
-                        <span class="tag">Playlists</span>
+                        <span class="tag">Guerra</span>
+                        <span class="tag">Estrategia</span>
+                        <span class="tag">Madurez</span>
                     </div>
                 </div>
                 <div class="category-card">
@@ -88,35 +88,35 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                         <i class="fas fa-futbol"></i>
                     </div>
                     <h3>La Batalla del Laberinto</h3>
-                    <p>Percy explora el laberinto para detener la invasión de Cronos.</p>
+                    <p>Un laberinto mágico se convierte en la clave para una invasión al Campamento Mestizo. Percy debe adentrarse en él mientras la guerra se acerca cada vez más.</p>
                     <div class="category-tags">
-                        <span class="tag">Equipos</span>
-                        <span class="tag">Tips</span>
-                        <span class="tag">Historia</span>
+                        <span class="tag">Sacrificio</span>
+                        <span class="tag">Oscuridad</span>
+                        <span class="tag">Destino</span>
                     </div>
                 </div>
                 <div class="category-card">
                     <div class="category-icon">
                         <i class="fas fa-book"></i>
                     </div>
-                    <h3>El ÚLtimo Héroe del Olimpo</h3>
-                    <p>Los semidioses luchan en la batalla final por el Olimpo.</p>
+                    <h3>El Último Héroe del Olimpo</h3>
+                    <p>La gran batalla final llega. Percy enfrenta su destino, la profecía se cumple y el futuro del Olimpo depende de decisiones difíciles.</p>
                     <div class="category-tags">
-                        <span class="tag">Trucos</span>
-                        <span class="tag">Matemáticas</span>
-                        <span class="tag">Ciencia</span>
+                        <span class="tag">Climax</span>
+                        <span class="tag">Valentía</span>
+                        <span class="tag">Transformación</span>
                     </div>
                 </div>
                 <div class="category-card">
                     <div class="category-icon">
                         <i class="fas fa-gamepad"></i>
                     </div>
-                    <h3>Videojuegos</h3>
-                    <p>Reseñas, análisis, noticias y experiencias en el amplio universo de los videojuegos.</p>
+                    <h3>Más Libros</h3>
+                    <p>Explora otras historias del universo de Percy Jackson, incluyendo sagas relacionadas, personajes destacados y nuevas aventuras que amplían este mundo mitológico.</p>
                     <div class="category-tags">
-                        <span class="tag">Reseñas</span>
-                        <span class="tag">Análisis</span>
-                        <span class="tag">Noticias</span>
+                        <span class="tag">Universo</span>
+                        <span class="tag">Mtología</span>
+                        <span class="tag">Aventuras</span>
                     </div>
                 </div>
             </div>
@@ -128,16 +128,16 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
         <div class="container">
             <div class="section-title">
                 <h2>Artículos Mágicos</h2>
-                <p>Algunos de mis artículos y publicaciones más populares sobre diferentes temas.</p>
+                <p>Objetos poderosos creados por los dioses, cargados de magia antigua y capaces de alterar el destino del Olimpo y del mundo mortal.</p>
             </div>
             <div class="featured-grid">
                 <div class="featured-card">
                     <div class="featured-img" style="background-color: #6d5dfc;"></div>
                     <div class="featured-content">
                         <h3>El Rayo Maestro</h3>
-                        <p>Descubre métodos prácticos para manejar el estrés y la ansiedad en tu día a día.</p>
+                        <p>Arma suprema de Zeus, símbolo de su autoridad y del poder absoluto del cielo.</p>
                         <div class="featured-meta">
-                            <span>Salud Mental</span>
+                            <span>Autoridad</span>
                             <span>Hace 3 días</span>
                         </div>
                     </div>
@@ -146,9 +146,9 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                     <div class="featured-img" style="background-color: #43cea2;"></div>
                     <div class="featured-content">
                         <h3>El Tridente de Poseidón</h3>
-                        <p>Una selección musical cuidadosamente curada para mejorar tu productividad.</p>
+                        <p>Fuente del dominio de Poseidón sobre los mares, capaz de desatar tormentas y terremotos.</p>
                         <div class="featured-meta">
-                            <span>Música</span>
+                            <span>Dominio</span>
                             <span>Hace 1 semana</span>
                         </div>
                     </div>
@@ -157,9 +157,9 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                     <div class="featured-img" style="background-color: #ff6b6b;"></div>
                     <div class="featured-content">
                         <h3>El Yelmo de Hades</h3>
-                        <p>Ejercicios efectivos que puedes hacer en casa sin necesidad de equipo especial.</p>
+                        <p>Pertenencia de Hades, otorga invisibilidad y representa el control sobre el inframundo.</p>
                         <div class="featured-meta">
-                            <span>Salud Física</span>
+                            <span>Ocultamiento</span>
                             <span>Hace 2 semanas</span>
                         </div>
                     </div>
@@ -173,7 +173,7 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
         <div class="container">
             <div class="section-title">
                 <h2>Personajes Principales</h2>
-                <p>Algunas imágenes que representan mis intereses y actividades.</p>
+                <p>Conoce a los personajes principales de esta maravillosa saga.</p>
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item">
