--- a/Index.html
+++ b/Index.html
@@ -49,7 +49,7 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
             <div class="categories-grid">
                 <div class="category-card">
                     <div class="category-icon">
-                        <i class="fas fa-heartbeat"></i>
+                        <i class="fa-solid fa-bolt"></i>
                     </div>
                     <h3>El Ladrón del Rayo</h3>
                     <p>Percy descubre que es un semidiós, hijo de Poseidón, y es acusado de robar el rayo de Zeus. Para evitar una guerra entre los dioses, emprende una misión peligrosa por todo EE. UU.</p>
@@ -61,7 +61,7 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                 </div>
                 <div class="category-card">
                     <div class="category-icon">
-                        <i class="fas fa-apple-alt"></i>
+                        <i class="fa-solid fa-sailboat"></i>
                     </div>
                     <h3>El Mar de los Mounstros</h3>
                     <p>El Campamento Mestizo está en peligro y Percy debe viajar al traicionero Mar de los Monstruos para salvarlo, mientras salen a la luz secretos sobre su familia y una antigua profecía.</p>
@@ -73,7 +73,7 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                 </div>
                 <div class="category-card">
                     <div class="category-icon">
-                        <i class="fas fa-music"></i>
+                        <i class="fa-solid fa-skull"></i>
                     </div>
                     <h3>La Maldición del Titán</h3>
                     <p>Una nueva profecía aparece y la amenaza de los titanes crece. Percy y sus amigos deben rescatar a una diosa, pero el destino no juega a su favor.</p>
@@ -85,7 +85,7 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                 </div>
                 <div class="category-card">
                     <div class="category-icon">
-                        <i class="fas fa-futbol"></i>
+                        <i class="fa-solid fa-circle-exclamation"></i>
                     </div>
                     <h3>La Batalla del Laberinto</h3>
                     <p>Un laberinto mágico se convierte en la clave para una invasión al Campamento Mestizo. Percy debe adentrarse en él mientras la guerra se acerca cada vez más.</p>
@@ -97,7 +97,7 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                 </div>
                 <div class="category-card">
                     <div class="category-icon">
-                        <i class="fas fa-book"></i>
+                        <i class="fa-solid fa-fire"></i>
                     </div>
                     <h3>El Último Héroe del Olimpo</h3>
                     <p>La gran batalla final llega. Percy enfrenta su destino, la profecía se cumple y el futuro del Olimpo depende de decisiones difíciles.</p>
@@ -109,7 +109,7 @@ una vez que conoces la verdad, ya no hay marcha atrás.</p>
                 </div>
                 <div class="category-card">
                     <div class="category-icon">
-                        <i class="fas fa-gamepad"></i>
+                        <i class="fa-solid fa-plus"></i>
                     </div>
                     <h3>Más Libros</h3>
                     <p>Explora otras historias del universo de Percy Jackson, incluyendo sagas relacionadas, personajes destacados y nuevas aventuras que amplían este mundo mitológico.</p>
